overflow: hidden on features section to prevent weird bottom margin

--- a/src/sections/features/style.sass
+++ b/src/sections/features/style.sass
@@ -5,6 +5,7 @@
 section#features
   background: $dark-5
   padding: 50px 0
+  overflow: hidden
 
   .container
     @include container
